SERVER-107298 Unconditionally upsert the placement change for the target namespace of renameCollection (#38302)

GitOrigin-RevId: 16277c823e06504bec8ec7872e57ae70f5b8d684